--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+<% password_digest = BCrypt::Password.create("password") %>
 
 one:
-  name: MyString
-  email: MyString
+  email_address: one@example.com
+  password_digest: <%= password_digest %>
 
 two:
-  name: MyString
-  email: MyString
+  email_address: two@example.com
+  password_digest: <%= password_digest %>
